--- a/strapi/api/nieuws-media-categories/models/nieuws-media-categories.settings.json
+++ b/strapi/api/nieuws-media-categories/models/nieuws-media-categories.settings.json
@@ -2,7 +2,7 @@
   "kind": "collectionType",
   "collectionName": "nieuws_media_categories",
   "info": {
-    "name": "nieuws-media-categories"
+    "name": "News / Media Category"
   },
   "options": {
     "increments": true,
